# towercab-3d

./: .gitignore  CHANGELOG.md  CLAUDE.md  MODDING.md  README.md  USER_GUIDE.md  electron.vite.config.ts  eslint.config.mts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.claude/: settings.local.json
.claude/agents/: release-manager.md
.github/workflows/: build.yml  claude-code-review.yml  claude.yml  release.yml
docs/: aircraft-timeline-interpolation-plan.md  realtraffic-api.md  remote-browser-access-plan.md
scripts/: build_converter.py  check.js  convert-aircraft-data.py  convert_fsltl_batch.py  convert_fsltl_glb.py  debug-rt-interpolation.cjs  denoise-logs.cjs  faa_aircraft_full_data.json  fsltl_converter.spec  scrape-tower-positions.py
src-tauri/: .gitignore  Cargo.lock.public  Cargo.toml  installer.nsi.template  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mods/tower-positions/: CYYC.json  CYYZ.json  KABE.json  KABI.json  KABQ.json  KABY.json  KACK.json  KACT.json  KADM.json  KADS.json  KADW.json  KAEG.json  KAEX.json  KAFW.json  KAGC.json  KAHN.json  KAID.json  KALB.json  KALN.json  KALO.json  KALW.json  KAMA.json  KAPA.json  KAPC.json  KAPF.json  KAPG.json  KAPH.json  KAPN.json  KARA.json  KASE.json  KASG.json  KASH.json  KATL.json  KATW.json  KAUS.json  KAVL.json  KAVP.json  KAZO.json  KBAF.json  KBAK.json  (+496 more)
src-tauri/resources/: README.md
src-tauri/src/: lib.rs  server.rs  vnas.rs
src/main/: index.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html  main.tsx  vite-env.d.ts
src/renderer/constants/: aircraft-timeline.ts  api.ts  babylon.ts  camera.ts  index.ts  lighting.ts  precipitation.ts  realtraffic.ts  rendering.ts  replay.ts  weather.ts
src/renderer/docs/: architecture.md  coordinate-systems.md  tile-cache-improvements.md
src/renderer/hooks/: useActiveViewportCamera.ts  useAircraftDataSource.ts  useAircraftFiltering.ts  useAircraftInterpolation.ts  useAircraftModels.ts  useAutoAirportSwitch.ts  useBabylonCameraSync.ts  useBabylonLabels.ts  useBabylonNightLighting.ts  useBabylonOverlay.ts  useBabylonPrecipitation.ts  useBabylonRootNode.ts  useBabylonScene.ts  useBabylonWeather.ts  useCameraInput.ts  useCesiumCamera.ts  useCesiumLabels.ts  useCesiumLighting.ts  useCesiumNightDarkening.ts  useCesiumStereo.ts  useCesiumViewer.ts  useCesiumWeather.ts  useDragResize.ts  useGroundAircraftTerrain.ts  useIsMobileLayout.ts  usePresenceWebSocket.ts  useRenderCulling.ts  useReplayPlayback.ts  useSmoothedWeather.ts  useSunElevation.ts  useTerrainQuality.ts  useTouchInput.ts  useVatsimData.ts
src/renderer/public/: aircraft-dimensions.json  service-worker.js
src/renderer/services/: AircraftDimensionsService.ts  AircraftModelService.ts  AirportService.ts  CustomVMRService.ts  ExportImportService.ts  FSLTLService.ts  MetarService.ts  MigrationService.ts  ModService.ts  RealTrafficService.ts  RunwayService.ts  SettingsTreeBuilder.ts  UpdateService.ts  VatsimService.ts  fsltlApi.ts
src/renderer/stores/: aircraftFilterStore.ts  aircraftTimelineStore.ts  airportStore.ts  cameraStore.ts  datablockPositionStore.ts  fsltlConversionStore.ts  globalSettingsStore.ts  measureStore.ts  realTrafficStore.ts  replayStore.ts  runwayStore.ts  settingsStore.ts  uiFeedbackStore.ts  updateStore.ts  vatsimStore.ts  viewportStore.ts  vnasStore.ts  vrStore.ts  weatherStore.ts
src/renderer/types/: aircraft-timeline.ts  airport.ts  babylon.ts  camera.ts  exportImport.ts  fsltl.ts  index.ts  mod.ts  realtraffic.ts  replay.ts  settings.ts  (+4 more)
todo/: multi-viewport-plan.md
(+120 files in other folders)
