[package]
name = "towercab-3d"
version = "0.0.21-alpha"
description = "3D Tower Cab View for VATSIM Controllers"
authors = [""]
license = "GPL-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.12", features = ["json", "native-tls", "gzip"] }
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"

# HTTP server for remote browser access
axum = { version = "0.7", features = ["ws"] }  # ws feature for WebSocket support
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync"] }
mime_guess = "2"
url = "2"  # For proper URL parsing in proxy validation
futures-util = { version = "0.3", features = ["sink"] }  # For WebSocket stream handling

# Synchronization primitives for vNAS state
parking_lot = "0.12"

# vNAS integration for real-time aircraft updates (optional, requires private repo access)
towercab-3d-vnas = { git = "https://github.com/Leftos/towercab-3d-vnas", branch = "master", optional = true }

[features]
# Enable vNAS real-time updates (requires access to private towercab-3d-vnas repo)
# Without this feature, the app falls back to VATSIM HTTP polling (15-second updates)
vnas = ["dep:towercab-3d-vnas"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }
